--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           background-image: url('https://images.unsplash.com/photo-1507730961199-996c3e6ebdde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1187&q=80');
         "
       >
-        <h3>Earth</h3>
+        <p>Earth</p>
       </div>
       <div
         class="slide"
@@ -26,7 +26,7 @@
           background-image: url('https://images.unsplash.com/photo-1542652184-04fe4ec9d4d4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=405&q=80');
         "
       >
-        <h3>Sky in mountains</h3>
+        <p>Sky in mountains</p>
       </div>
       <div
         class="slide"
@@ -34,7 +34,7 @@
           background-image: url('https://images.unsplash.com/photo-1614121181207-4b6c334d353d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80');
         "
       >
-        <h3>Nasa</h3>
+        <p>Nasa</p>
       </div>
       <div
         class="slide active"
@@ -42,7 +42,7 @@
           background-image: url('https://images.unsplash.com/photo-1623733197894-110fb242f7d3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
         "
       >
-        <h3>Mountains</h3>
+        <p>Mountains</p>
       </div>
       <div
         class="slide"
@@ -50,7 +50,7 @@
           background-image: url('https://images.unsplash.com/photo-1571076345370-02c48d31815d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2448&q=80');
         "
       >
-        <h3>grand canyon</h3>
+        <p>grand canyon</p>
       </div>
     </div>
     <script src="app.js"></script>
